--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -62,7 +62,7 @@ jobs:
         configuration: [Debug, Release]
 
     #runs-on: [self-hosted, "${{ inputs.chosen-os }}"]  # For a list of available runner types, refer to
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
