--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -90,6 +90,8 @@ jobs:
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test
+    - name: Workload List
+      run: dotnet workload list
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
