--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -93,7 +93,7 @@ jobs:
         dotnet test
         dotnet workload list
 
-     Restore the application to populate the obj folder with RuntimeIdentifiers
+    # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       env:
